<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogadorFragment">

    <TextView
        android:id="@+id/tvRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="6dp"
        android:text="@string/ra"
        app:layout_constraintBottom_toTopOf="@+id/etIdJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="6dp"
        android:text="@string/nome"
        app:layout_constraintBottom_toTopOf="@+id/etIdJogador"
        app:layout_constraintEnd_toStartOf="@+id/tvRa"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etAlturaJogador"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/etAlturaJogador"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etPesoJogador"
        app:layout_constraintStart_toStartOf="@+id/etDataNascJogador"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascJogador" />

    <EditText
        android:id="@+id/etNomeJogador"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/etNomeJogador"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdJogador" />

    <Button
        android:id="@+id/btnCadastrarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTime" />

    <EditText
        android:id="@+id/etPesoJogador"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/etPesoJogador"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/spTime"
        app:layout_constraintEnd_toEndOf="@+id/spTime"
        app:layout_constraintTop_toBottomOf="@+id/etAlturaJogador" />

    <EditText
        android:id="@+id/etDataNascJogador"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/etDataNascJogador"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etAlturaJogador"
        app:layout_constraintEnd_toEndOf="@+id/etNomeJogador"
        app:layout_constraintTop_toBottomOf="@+id/etNomeJogador" />

    <Button
        android:id="@+id/btnDeletarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:text="@string/btnDeletar"
        app:layout_constraintBottom_toTopOf="@+id/tvResultadoJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCadastrarJogador"
        app:layout_constraintTop_toBottomOf="@+id/spTime" />

    <Button
        android:id="@+id/btnListarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnListar"
        app:layout_constraintBottom_toTopOf="@+id/tvResultadoJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarJogador"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/etIdJogador"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/etIDJogador"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etNomeJogador"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarJogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRa" />

    <Spinner
        android:id="@+id/spTime"
        android:layout_width="239dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnDeletarJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPesoJogador" />

    <Button
        android:id="@+id/btnAtualizarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/btnAtualizar"
        app:layout_constraintEnd_toStartOf="@+id/btnCadastrarJogador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTime" />

    <Button
        android:id="@+id/btnBuscarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="158dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdJogador"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <TextView
        android:id="@+id/tvResultadoJogador"
        android:layout_width="396dp"
        android:layout_height="89dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDeletarJogador" />

</androidx.constraintlayout.widget.ConstraintLayout>